<resources>
    <string name="app_name">Pizza_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Varnika_Pizza</string>
    <string name="nav_header_subtitle">Order pizza online</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_order">Order</string>
    <string name="menu_view">Menu</string>
    <string name="menu_offer">Offer</string>
    <string name="menu_extra">Extra</string>
    <string name="contact">Contact</string>
    <string name="rateus">Rate Us</string>

</resources>